# dark_web_scrapper

./: .env.example  .gitignore  DEDUPLICATION_SUMMARY.md  Dockerfile  README.md  api_examples.py  cleanup_results_20250619_015744.json  docker-compose.yml  duplicate_analysis_20250619_015758.json  entrypoint.sh  generate-certs.sh  opensearch.yml  packages.txt  pyproject.toml  scrapy.cfg  setup-opensearch.sh  setup-security.sh  test_api.py  test_tor_connection.py  to_bfs.txt  view_data.py
api/: Dockerfile  README.md  config.py  main.py  models.py  opensearch_client.py
dark_web_scraper/: items.py  middlewares.py  pipelines.py  settings.py
dark_web_scraper/spiders/: tor_spider.py
deduplication/: README.md  cleanup_config.json  cleanup_duplicates.py  cron_cleanup_service.py  duplicate_analyzer.py  requirements.txt  smart_deduplicator.py
